--- a/DOMTree.NET/DOMTree.NET/MainWindow.xaml
+++ b/DOMTree.NET/DOMTree.NET/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DOMTree.NET"
         mc:Ignorable="d"
-        Title="MainWindow" Height="300" Width="300">
+        Title="MainWindow" MinHeight="400" Height="400" MinWidth="900" Width="900">
     <Grid>
         
     </Grid>
