Replace RichTextbox with TextBox in CodeView.xaml

--- a/DOMTree.NET/DOMTree.NET/Views/Code/CodeView.xaml
+++ b/DOMTree.NET/DOMTree.NET/Views/Code/CodeView.xaml
@@ -9,14 +9,6 @@
       Title="CodeView">
 
     <Grid Background="Black">
-        <RichTextBox AcceptsTab="True" Margin="10">
-            <RichTextBox.Document>
-                <FlowDocument>
-                    <Paragraph>
-                        <Run Text="{Binding Code}"/>
-                    </Paragraph>
-                </FlowDocument>
-            </RichTextBox.Document>
-        </RichTextBox>
+        <TextBox AcceptsTab="True" Margin="10" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Code,Mode=TwoWay}"/>
     </Grid>
 </local:MvxWpfPage>
