--- a/DOMTree.NET/DOMTree.NET/Views/MainView.xaml
+++ b/DOMTree.NET/DOMTree.NET/Views/MainView.xaml
@@ -12,7 +12,7 @@
     <Grid Background="Red">
         <Menu VerticalAlignment="Top" IsMainMenu="True" Height="20">
             <MenuItem Header="File">
-                <MenuItem Header="New..."/>
+                <MenuItem Header="New..." Command="{Binding NewFileCommand}"/>
                 <MenuItem Header="Open..." Command="{Binding OpenFileCommand}"/>
                 <MenuItem Header="Save"/>
                 <MenuItem Header="Save All"/>
@@ -47,7 +47,7 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Button Content="{Binding FileName}" Command="{Binding ElementName=mainView,Path=DataContext.ShowContentCommand}" CommandParameter="{Binding}" />
+                            <Button Content="{Binding FileName}" Command="{Binding ElementName=mainView,Path=DataContext.ShowContentCommand}" CommandParameter="{Binding ID}" />
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
