--- a/DOMTree.NET/DOMTree.NET/Views/MainView.xaml
+++ b/DOMTree.NET/DOMTree.NET/Views/MainView.xaml
@@ -14,8 +14,8 @@
             <MenuItem Header="File">
                 <MenuItem Header="New..." Command="{Binding NewFileCommand}"/>
                 <MenuItem Header="Open..." Command="{Binding OpenFileCommand}"/>
-                <MenuItem Header="Save"/>
-                <MenuItem Header="Save All"/>
+                <MenuItem Header="Save" Command="{Binding SaveFileCommand}"/>
+                <MenuItem Header="Save As..." Command="{Binding SaveFileAsCommand}"/>
             </MenuItem>
             <MenuItem Header="Edit">
                 <MenuItem Header="Undo"/>
