--- a/DOMTree.NET/DOMTree.NET/Views/Code/CodeView.xaml
+++ b/DOMTree.NET/DOMTree.NET/Views/Code/CodeView.xaml
@@ -7,8 +7,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
       Title="CodeView">
-
     <Grid Background="Black">
-        <TextBox AcceptsTab="True" Margin="10" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Code,Mode=TwoWay}"/>
+        <TextBox AcceptsTab="True" Margin="10" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Code,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
     </Grid>
 </local:MvxWpfPage>
