Rename DesignViewModel.cs and DesignView.xaml into DOMViewModel and DOMView

--- a/DOMTree.NET/DOMTree.NET/Views/Design/DOMView.xaml
+++ b/DOMTree.NET/DOMTree.NET/Views/Design/DOMView.xaml
@@ -1,4 +1,4 @@
-﻿<local:MvxWpfPage x:Class="DOMTree.NET.Views.Design.DesignView"
+﻿<local:MvxWpfPage x:Class="DOMTree.NET.Views.Design.DOMView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
