--- a/DOMTree.NET/DOMTree.NET/Views/Design/DOMView.xaml
+++ b/DOMTree.NET/DOMTree.NET/Views/Design/DOMView.xaml
@@ -3,12 +3,23 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:controls="clr-namespace:DOMTree.NET.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
       xmlns:local="clr-namespace:DOMTree.NET"
       Title="DesignView">
-
-    <Grid Background="White">
-
+    <Grid>
+        <Grid x:Name="grid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <ScrollViewer HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" Grid.Column="0" Grid.Row="0">
+                <Canvas Background="Black" Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}">
+                    <!--<Button Click="Button_Click" Content="Click Me" Canvas.Left="100"/>-->
+                    <controls:MarkupNode Text="head" x:Name="markup" Canvas.Left="200"/>
+                    <controls:AttributeNode x:Name="attrib" Text="h1{ font-size: 20;}" Canvas.Left="200" Canvas.Top="200" />
+                    <controls:TextNode x:Name="text" Text="Lorem ipsum dolor sit amet" Canvas.Left="200" Canvas.Top="400"/>
+                    <controls:Connection X1="235" Y1="25" X2="250" Y2="200"/>
+                    <controls:Connection X1="250" Y1="400" X2="250" Y2="300"/>
+                </Canvas>
+            </ScrollViewer>
+        </Grid>
     </Grid>
 </local:MvxWpfPage>
