--- a/DOMTree.NET/DOMTree.NET/Views/Code/CodeView.xaml
+++ b/DOMTree.NET/DOMTree.NET/Views/Code/CodeView.xaml
@@ -8,6 +8,6 @@
       d:DesignHeight="300" d:DesignWidth="300"
       Title="CodeView">
     <Grid Background="Black">
-        <TextBox AcceptsTab="True" Margin="10" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Code,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox VerticalScrollBarVisibility="Auto" AcceptsTab="True" Margin="10" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Code,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
     </Grid>
 </local:MvxWpfPage>
